--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_GOOGLE_CLIENT_ID="859678229219-7gf5c5cg5kt1fpnndh2nisms5opmp5v7.apps.googleusercontent.com"
-NEXT_PUBLIC_BACKEND_ENDPOINT="https://stag-server.soclif.com"
+NEXT_PUBLIC_BACKEND_ENDPOINT="http://localhost:7777"
+NEXT_PUBLIC_APP_NAME="WEB POS APP"
