--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_ENDPOINT="http://localhost:7777"
-NEXT_PUBLIC_APP_NAME="WEB POS APP"
+NEXT_PUBLIC_BACKEND_ENDPOINT="https://pos-server.soclif.com"
+NEXT_PUBLIC_APP_NAME="MealPot.app"
