--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.3.3"
   }
