--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start",
     "lint": "next lint",
     "nvm:setup": "nvm i && nvm use",
-    "compile": "graphql-codegen",
-    "watch": "graphql-codegen -w"
+    "db:truncate": "node ./scripts/truncate-db.js",
+    "db:deploy": "prisma migrate deploy",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:pull": "prisma db pull",
+    "db:push": "prisma db push",
+    "db:reset": "npm run db:truncate && npm run db:seed",
+    "db:seed": "prisma db seed",
+    "db:setup": "npm run db:generate && npm run db:deploy",
+    "db:studio": "npx prisma studio",
+    "generate": "npm run db:generate && npm run types:generate",
+    "generate:env": "npm run ssh:generate && npm run secret:generate",
+    "ssh:generate": "node ./scripts/generate-rsa-keys.js",
+    "secret:generate": "node ./scripts/generate-secret.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +37,7 @@
     "@apollo/client": "^3.8.8",
     "@apollo/experimental-nextjs-app-support": "^0.5.2",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.8.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -50,6 +63,7 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
