another build fix

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "next:build": "next build",
-    "build": "npm run prisma generate && npm run next:build",
+    "build": "npm run db:generate && npm run next:build",
     "start": "next start",
     "lint": "next lint",
     "nvm:setup": "nvm i && nvm use",
