--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-oauth/google": "^0.12.1",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
@@ -62,6 +63,8 @@
     "cookies-next": "^4.1.0",
     "embla-carousel-react": "^8.0.0-rc19",
     "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "prisma": "^5.8.0",
@@ -79,6 +82,7 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
